salesforce/omnishift-sf/force-app/main/default/objects/Contact/fields/Omnishift_Compliance_Reason__c.field-meta.xml
<CustomField>
    <fullName>Omnishift_Compliance_Reason__c</fullName>
    <description>Why the compliance check reached its status. Written by the nightly run. Kept separate from the disposition reason, which belongs to the advisor.</description>
    <label>Omnishift Compliance Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>