salesforce/omnishift-sf/force-app/main/default/objects/Contact/fields/Omnishift_Compliance_Status__c.field-meta.xml
<CustomField>
    <fullName>Omnishift_Compliance_Status__c</fullName>
    <label>Omnishift Compliance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Auto-corrected</fullName>
            </value>
            <value>
                <fullName>Flagged</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>