salesforce/omnishift-sf/force-app/main/default/objects/Contact/fields/Omnishift_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Omnishift_Disposition__c</fullName>
    <label>Omnishift Disposition</label>
    <length>80</length>
    <type>Text</type>
</CustomField>