salesforce/omnishift-sf/force-app/main/default/objects/Contact/fields/Omnishift_Dispositioned_On__c.field-meta.xml
<CustomField>
    <fullName>Omnishift_Dispositioned_On__c</fullName>
    <description>When the advisor acted. LastModifiedDate cannot answer this because the nightly run rewrites it, so no trend over time is measurable without this field.</description>
    <label>Omnishift Dispositioned On</label>
    <type>DateTime</type>
</CustomField>