salesforce/omnishift-sf/force-app/main/default/objects/Contact/fields/Omnishift_Draft_Body__c.field-meta.xml
<CustomField>
    <fullName>Omnishift_Draft_Body__c</fullName>
    <description>Body of the drafted outreach message. A draft EmailMessage cannot exist on a Lead - Status=Draft requires a Case parent - so the draft is held here and merged into the standard Send Email composer via a Lightning email template.</description>
    <label>Omnishift Draft Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>