salesforce/omnishift-sf/force-app/main/default/objects/Contact/fields/Omnishift_Driver__c.field-meta.xml
<CustomField>
    <fullName>Omnishift_Driver__c</fullName>
    <description>Which signal won and produced the reason shown. Stored as its own value because the learning loop groups outcomes by it, and a 200-character sentence cannot be grouped in a report or a query.</description>
    <label>Omnishift Driver</label>
    <length>40</length>
    <type>Text</type>
</CustomField>