salesforce/omnishift-sf/force-app/main/default/objects/Contact/fields/Omnishift_Name__c.field-meta.xml
<CustomField>
    <fullName>Omnishift_Name__c</fullName>
    <description>Full name as one column. The standard compound Name field cannot be resolved as a list view column, and first and last as separate columns both truncate to an initial at their default width.</description>
    <formula>TRIM(BLANKVALUE(FirstName, &apos;&apos;) &amp; &apos; &apos; &amp; LastName)</formula>
    <label>Name</label>
    <type>Text</type>
</CustomField>