salesforce/omnishift-sf/force-app/main/default/objects/Contact/fields/Omnishift_Rank__c.field-meta.xml
<CustomField>
    <fullName>Omnishift_Rank__c</fullName>
    <label>Omnishift Rank</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>