salesforce/omnishift-sf/force-app/main/default/objects/Contact/fields/Omnishift_Why_Now__c.field-meta.xml
<CustomField>
    <fullName>Omnishift_Why_Now__c</fullName>
    <description>Plain-language reason this record surfaced today.</description>
    <label>Omnishift Why Now</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>