salesforce/omnishift-sf/force-app/main/default/objects/Contact/listViews/Omnishift_Held.listView-meta.xml
<ListView>
    <fullName>Omnishift_Held</fullName>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Omnishift_Quarantine_Reason__c</columns>
    <columns>Omnishift_Disposition__c</columns>
    <columns>Omnishift_Outcome__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Omnishift_Quarantined__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Growth Agent - Held</label>
</ListView>